--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
-2023.2\zybo-z7-20\hw-proj1\vitis_classic\.metadata
-2023.2\zybo-z7-20\hw-proj1\vitis_classic\IDE.log
+2023.2/zybo-z7-20/hw-proj1/vitis_classic/.metadata
+2023.2/zybo-z7-20/hw-proj1/vitis_classic/IDE.log
+2023.2/zybo-z7-20/hw-proj1/vitis_classic/.analytics
