--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 2023.2/zybo-z7-20/hw-proj1/vitis_classic/.metadata
 2023.2/zybo-z7-20/hw-proj1/vitis_classic/IDE.log
 2023.2/zybo-z7-20/hw-proj1/vitis_classic/.analytics
+2023.2/zybo-z7-20/hw-proj1/vitis_classic/freertos_single_core_pfm/.log
