--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 2023.2/zybo-z7-20/hw-proj1/vitis_classic/IDE.log
 2023.2/zybo-z7-20/hw-proj1/vitis_classic/.analytics
 2023.2/zybo-z7-20/hw-proj1/vitis_classic/freertos_single_core_pfm/.log
+2023.2/zybo-z7-20/hw-proj1/vitis_classic/freertos_single_core_pfm/logs/platform.log
+2023.2/zybo-z7-20/hw-proj1/vitis_classic/freertos_single_core_pfm/platform.tcl
